<resources>

    <string name="app_name">FormerRoid</string>
    <string name="title_section1">번호</string>
    <string name="title_section2">위치</string>
    <string name="title_section3">시간</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_former_roid">FormerRoidActivity</string>
    <string name="list_layer_title">list</string>
    <string name="map_layer_title">map</string>
    <string name="insert_btn">등록</string>
    <string name="search_btn">찾기</string>
    <string name="txt_name">이름</string>
    <string name="txt_tel">전화번호</string>
    <string name="txt_ring_mode">모드</string>
    <string name="txt_ring_mode_option">옵션</string>
    <string name="txt_ring_mode_none">무음</string>
    <string name="txt_ring_mode_ring">벨</string>
    <string name="txt_ring_mode_vibrator">진동</string>

</resources>