<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" 
    	>
	    <EditText
	        android:id="@+id/name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="text"
	        android:hint="@string/txt_name"
	        android:maxLength="15"
	        >
	    </EditText>
	    <EditText
	        android:id="@+id/tel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="phone" 
	        android:hint="@string/txt_tel"
	        android:maxLength="20"
	        >
	    </EditText>
	    <RadioGroup android:id="@+id/ring_mode"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        >
	        <RadioButton android:id="@+id/ring_mode_0" 
	            android:text="@string/txt_ring_mode_none" 
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:checked="true"
	            />
	        <RadioButton android:id="@+id/ring_mode_1" 
	            android:text="@string/txt_ring_mode_vibrator"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	/>
	        <RadioButton android:id="@+id/ring_mode_2"  
	            android:text="@string/txt_ring_mode_ring"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	/>
	    </RadioGroup>
    </LinearLayout>
    <LinearLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" 
        >
	    <Button android:id="@+id/insertBtn"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	        android:text="@string/insert_btn"
	        android:layout_marginBottom="10dp"
	        />
	    <Button android:id="@+id/searchBtn"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	        android:text="@string/search_btn"
	        android:layout_marginBottom="10dp"
	        />
    </LinearLayout>
    
    <ListView
        android:id="@+id/listView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ACE6DE"
        />

</LinearLayout>